# Raspberry-Pi-4-Self-Driving-Vechicle

./: .gitignore  README.md  demo.md  issues.md
others/: README.md
resources/: README.md
src/Observer(Computer)/src/: basic_utilities.java  main.py  main_recv_img.py  my_logger.java
src/master(Raspberry Pi 4B)/src/: main.py
src/master__Raspberry_Pi_4B/: Makefile
src/master__Raspberry_Pi_4B/src/: main.cpp  main.h  other.cpp
src/master__Raspberry_Pi_4B/src/src/: other.cpp
src/master__Raspberry_Pi_4B/test/: logger_speed.cpp
src/observer_Computer/: README.md  app.java  build.bat  files_info.txt  main.py  pom.xml  text_communication.py
src/observer_Computer/app/: app.java
src/observer_Computer/src/analytical_tools_panels/: Scene_speed_panel.java
src/observer_Computer/src/charts_panels/: gauge_chart_panel.java
src/observer_Computer/src/others/: basic_utilities.java  my_json_reader_writer.java  my_literals.java  my_logger.java
src/observer_Computer/src/scenes/: Scene_about_panel.java  Scene_home_panel.java  Scene_log_panel.java  Scene_stream_via_establishing_socket.java  Scene_stream_via_local_file.java  Scene_usage_panel.java
src/slave(Pi-Pico)/: CMakeLists.txt  main.uf2  warning.md
src/slave(Pi-Pico)/include/: FreeRTOSConfig.h
src/slave(Pi-Pico)/src/: functions.c  functions.h  global_vars.c  global_vars.h  main.c
src/slave__Pi_Pico/src/: functions.c  functions.h  global_vars.h  main.c
src/user_display/: CMakeLists.txt  README.md  resources.qrc  setup.md
src/user_display/src/: main.cpp
src/user_display/src/src/qt/: myappsettingsclass.cpp  myappsettingsclass.h  vehiclecommunication.cpp  vehiclecommunication.h
src/user_display/src/ui/: Main.qml  home.qml
src/user_display/src/ui/others/control-tabs/: Automatic.qml  Manual.qml  Semi-Automatic.qml
src/user_display/src/ui/pages/: app-logs.qml  app-settings.qml  home.qml  logger.qml
test/: dummy_socket_from_master.py
(+29 files in other folders)
